[gd_scene load_steps=8 format=3 uid="uid://spdi8kuoikwd"]

[ext_resource type="Theme" uid="uid://dx0iaf1bhus87" path="res://images/grid_theme.tres" id="1_1pppv"]
[ext_resource type="Shader" path="res://images/stars.gdshader" id="1_bcph8"]
[ext_resource type="Script" path="res://src/menu.gd" id="2_4poto"]
[ext_resource type="PackedScene" uid="uid://bunf58qahotxy" path="res://src/tutorial.tscn" id="4_t27lu"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_b27y4"]
noise_type = 0
frequency = 0.35

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_iqlkg"]
noise = SubResource("FastNoiseLite_b27y4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nrnhr"]
shader = ExtResource("1_bcph8")
shader_parameter/resolution = Vector2(1152, 648)
shader_parameter/density = 40.0
shader_parameter/speed_x = -3.0
shader_parameter/speed_y = -0.999999
shader_parameter/layers = 5.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_iqlkg")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1pppv")
script = ExtResource("2_4poto")

[node name="Stars" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nrnhr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Path Eraser"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Margin/VBox/HBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "NÂº Players:"

[node name="NPlayersSpinBox" type="SpinBox" parent="Margin/VBox/HBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
max_value = 4.0
value = 2.0
alignment = 1

[node name="HBox2" type="HBoxContainer" parent="Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Margin/VBox/HBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid width:"

[node name="WidthSpinBox" type="SpinBox" parent="Margin/VBox/HBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 9.0
value = 5.0
alignment = 1

[node name="Label2" type="Label" parent="Margin/VBox/HBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid height:"

[node name="HeightSpinBox" type="SpinBox" parent="Margin/VBox/HBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 9.0
value = 5.0
alignment = 1

[node name="Center" type="CenterContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/Center"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Panel1" type="Panel" parent="Margin/VBox/Center/HBox"]
custom_minimum_size = Vector2(225, 150)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Center/HBox/Panel1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Center/HBox/Panel1/Margin"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PlayerName" type="LineEdit" parent="Margin/VBox/Center/HBox/Panel1/Margin/VBox"]
layout_mode = 2
text = "Player 1"
alignment = 1
max_length = 10

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/Center/HBox/Panel1/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player" type="Button" parent="Margin/VBox/Center/HBox/Panel1/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Player"

[node name="AI" type="Button" parent="Margin/VBox/Center/HBox/Panel1/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "AI"

[node name="Panel2" type="Panel" parent="Margin/VBox/Center/HBox"]
custom_minimum_size = Vector2(225, 150)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Center/HBox/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Center/HBox/Panel2/Margin"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PlayerName" type="LineEdit" parent="Margin/VBox/Center/HBox/Panel2/Margin/VBox"]
layout_mode = 2
text = "Player 2"
alignment = 1
max_length = 10

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/Center/HBox/Panel2/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player" type="Button" parent="Margin/VBox/Center/HBox/Panel2/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Player"

[node name="AI" type="Button" parent="Margin/VBox/Center/HBox/Panel2/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "AI"

[node name="Panel3" type="Panel" parent="Margin/VBox/Center/HBox"]
visible = false
custom_minimum_size = Vector2(225, 150)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Center/HBox/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Center/HBox/Panel3/Margin"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PlayerName" type="LineEdit" parent="Margin/VBox/Center/HBox/Panel3/Margin/VBox"]
layout_mode = 2
text = "Player 3"
alignment = 1
max_length = 10

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/Center/HBox/Panel3/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player" type="Button" parent="Margin/VBox/Center/HBox/Panel3/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Player"

[node name="AI" type="Button" parent="Margin/VBox/Center/HBox/Panel3/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "AI"

[node name="Panel4" type="Panel" parent="Margin/VBox/Center/HBox"]
visible = false
custom_minimum_size = Vector2(225, 150)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Center/HBox/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Center/HBox/Panel4/Margin"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PlayerName" type="LineEdit" parent="Margin/VBox/Center/HBox/Panel4/Margin/VBox"]
layout_mode = 2
text = "Player 4"
alignment = 1
max_length = 10

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/Center/HBox/Panel4/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player" type="Button" parent="Margin/VBox/Center/HBox/Panel4/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Player"

[node name="AI" type="Button" parent="Margin/VBox/Center/HBox/Panel4/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "AI"

[node name="StartGame" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="HBox2" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="ShowTutorial" type="Button" parent="Margin/VBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 6
text = "Show Tutorial"

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Margin/VBox/HBox2/HBox"]
layout_mode = 2
text = "Volume"

[node name="MasterVol" type="HSlider" parent="Margin/VBox/HBox2/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.8

[node name="Tutorial" parent="." instance=ExtResource("4_t27lu")]
layout_mode = 1

[connection signal="value_changed" from="Margin/VBox/HBox/HBox/NPlayersSpinBox" to="." method="_on_n_players_spin_box_value_changed"]
[connection signal="value_changed" from="Margin/VBox/HBox/HBox2/WidthSpinBox" to="." method="_on_width_spin_box_value_changed"]
[connection signal="value_changed" from="Margin/VBox/HBox/HBox2/HeightSpinBox" to="." method="_on_height_spin_box_value_changed"]
[connection signal="text_changed" from="Margin/VBox/Center/HBox/Panel1/Margin/VBox/PlayerName" to="." method="_on_player1_name_text_changed"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel1/Margin/VBox/HBox/Player" to="." method="_on_player1_toggled"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel1/Margin/VBox/HBox/AI" to="." method="_on_ai1_toggled"]
[connection signal="text_changed" from="Margin/VBox/Center/HBox/Panel2/Margin/VBox/PlayerName" to="." method="_on_player2_name_text_changed"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel2/Margin/VBox/HBox/Player" to="." method="_on_player2_toggled"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel2/Margin/VBox/HBox/AI" to="." method="_on_ai2_toggled"]
[connection signal="text_changed" from="Margin/VBox/Center/HBox/Panel3/Margin/VBox/PlayerName" to="." method="_on_player3_name_text_changed"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel3/Margin/VBox/HBox/Player" to="." method="_on_player3_toggled"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel3/Margin/VBox/HBox/AI" to="." method="_on_ai3_toggled"]
[connection signal="text_changed" from="Margin/VBox/Center/HBox/Panel4/Margin/VBox/PlayerName" to="." method="_on_player4_name_text_changed"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel4/Margin/VBox/HBox/Player" to="." method="_on_player4_toggled"]
[connection signal="toggled" from="Margin/VBox/Center/HBox/Panel4/Margin/VBox/HBox/AI" to="." method="_on_ai4_toggled"]
[connection signal="button_up" from="Margin/VBox/StartGame" to="." method="_on_start_game_button_up"]
[connection signal="button_up" from="Margin/VBox/HBox2/ShowTutorial" to="." method="_on_show_tutorial_button_up"]
[connection signal="value_changed" from="Margin/VBox/HBox2/HBox/MasterVol" to="." method="_on_master_vol_value_changed"]
